update add post detail

--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends 'blog/base.html' %}
 
-<head>
-    <title>Django blog</title>
-</head>
-
-<body>
-<div>
-    <h1>
-        <a href="">Django Blog</a>
-    </h1>
-</div>
-
-<div>
+{% block content %}
     {% for post in posts %}
-        <div>
-            <p>publié: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
-</div>
-</body>
-
-</html>
+{% endblock %}
