--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,4 @@
 
-
 .page-header {
     background-color: #ff9400;
     margin-top: 0;
@@ -12,8 +11,9 @@
     text-decoration: none;
 }
 
-.content {
-    margin-left: 40px;
+.row {
+    margin-right: 25%;
+    margin-left: 25%;
 }
 
 h1, h2, h3, h4 {
@@ -46,4 +46,8 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
 }
